mockiato_codegen/tests/ui/trait-bound-not-derivable.rs
#![feature(plugin)]
#![plugin(mockiato_codegen)]

trait Bar {}

#[mockable]
trait Foo: Bar + std::fmt::Debug {}

#[mockable]
trait Baz: std::fmt::Display {}
